--- a/templates/mychart.html
+++ b/templates/mychart.html
@@ -6,12 +6,31 @@
     <h1>我的統計圖表</h1>
 {% endblock %}
 {% block content %}
-<button><a href="/mychart/">全部顯示</a></button>
-{% for branch in branches %}
-    <button>
-        <a href="/mychart/{{branch.id}}/">{{branch.title}}</a>
+    <button class='btn btn-sm'>
+        <a href="/mychart/">所有分店</a>
     </button>
-{% endfor %}
+    {% for s in stores %}
+        <button class='btn btn-sm'>
+            <a href="/mychart/{{s.id}}/">
+                {{s.title}}
+            </a>
+        </button>
+    {% endfor %}
+<br>
+月份：
+<button class='btn btn-sm'>
+    <a href='/chartbydate/2020/10/'>2020/10</a>
+</button>
+<button class='btn btn-sm'>
+    <a href='/chartbydate/2020/11/'>2020/11</a>
+</button>
+年份：
+<button class='btn btn-sm'>
+    <a href='/chartbydate/2020/'>2020</a>
+</button>
+<button class='btn btn-sm'>
+    <a href='/chartbydate/2021/'>2021</a>
+</button>
 <center>
 <table width=800>
     <tr><td>
@@ -30,7 +49,7 @@ var myChart = new Chart(ctx, {
             {% endfor %}
         ],
         datasets: [{
-            label: '各分店營收情形',
+            label: '{{ title }}',
             data: [
                 {% for item in data %}
                     '{{ item.income }}',
