--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 {% load static %}    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="{% static "nkust.jpg" %}" width=60>
+          <img src="{% static "STM.jpg" %}" width=60>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
