--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,8 @@
                 <a class="dropdown-item" href="/lotto/">大樂透預測</a>
                 <a class="dropdown-item" href="/admin/">後臺管理</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/mychart/">線上統計圖</a>
+                <a class="dropdown-item" href="/mychart/">線上統計圖(直條圖)</a>
+                <a class="dropdown-item" href="/mychart2/">線上統計圖(橫條圖)</a>
               </div>
             </li>
             <li class="nav-item">
