--- a/templates/mychart2.html
+++ b/templates/mychart2.html
@@ -41,7 +41,7 @@
 <script>
 var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
-    type: 'bar',
+    type: 'horizontalBar',
     data: {
         labels: [ 
             {% for item in data %}
