--- a/templates/mychart2.html
+++ b/templates/mychart2.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
     <button class='btn btn-outline-info btn-sm'>
-        <a href="/mychart/">所有分店</a>
+        <a href="/mychart/">所有公司</a>
     </button>
     {% for s in stores %}
         <button class='btn btn-outline-light btn-sm'>
