--- a/templates/post.html
+++ b/templates/post.html
@@ -6,6 +6,13 @@
     <h1>{{ post.title }}</h1>
 {% endblock %}
 {% block content %}
+  <li type="square"><b>相關資訊網站連結：</b>
+    <button class='btn btn-outline-info btn-sm'>
+      <a href="http://www.shippingdigest.tw/news.aspx"><b>航貿週刊</b></a>
+    </button>
+    <button class='btn btn-outline-info btn-sm'>
+      <a href="https://www.twport.com.tw/chinese/News.aspx?n=4E4437C60EA3BF8E&sms=AB20696A04F7E563"><b>臺灣港務股份有限公司</b></a>
+    </button>
       <div class="card">
         <div class="card-header">
           {{ post.title }}
