--- a/templates/mychart2.html
+++ b/templates/mychart2.html
@@ -17,14 +17,14 @@
         </button>
     {% endfor %}
 <br>
-月份：
+<strong>月份：</strong>
 <button class='btn btn-outline-primary btn-sm'>
     <a href='/chartbydate/2020/10/'>2020/10</a>
 </button>
 <button class='btn btn-outline-primary btn-sm'>
     <a href='/chartbydate/2020/11/'>2020/11</a>
 </button>
-年份：
+<strong>年份：</strong>
 <button class='btn btn-outline-primary btn-sm'>
     <a href='/chartbydate/2020/'>2020</a>
 </button>
